--- a/design.css
+++ b/design.css
@@ -1,12 +1,23 @@
-.typewriter h1 {
+body {
+    background: #333;
+    padding-top: 5em;
+    display: flex;
+    justify-content: center;
+    font-family: "Avenir"
+  }
+  
+  /* DEMO-SPECIFIC STYLES */
+  .typewriter h1 {
+    color: #fff;
+    font-family: monospace;
     overflow: hidden; /* Ensures the content is not revealed until the animation */
-    border-right: .15em solid rgb(15, 202, 226); /* The typwriter cursor */
+    border-right: .15em solid orange; /* The typwriter cursor */
     white-space: nowrap; /* Keeps the content on a single line */
     margin: 0 auto; /* Gives that scrolling effect as the typing happens */
     letter-spacing: .15em; /* Adjust as needed */
     animation: 
-      typing 3.5s steps(40, end),
-      blink-caret .75s step-end infinite;
+      typing 3.5s steps(30, end),
+      blink-caret .5s step-end infinite;
   }
   
   /* The typing effect */
@@ -18,5 +29,5 @@
   /* The typewriter cursor effect */
   @keyframes blink-caret {
     from, to { border-color: transparent }
-    50% { border-color: rgb(15, 202, 226); }
+    50% { border-color: orange }
   }
